--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,10 @@
 [versions]
 agp = "8.5.0"
+comSquareupRetrofit2ConverterGson = "2.11.0"
+comSquareupRetrofit2Retrofit = "2.11.0"
+converterGson = "latest.version"
+converterGsonVersion = "2.0.0-beta2"
+gson = "2.10.1"
 kotlin = "1.9.0"
 coreKtx = "1.10.1"
 junit = "4.13.2"
@@ -8,13 +13,29 @@ espressoCore = "3.5.1"
 lifecycleRuntimeKtx = "2.6.1"
 activityCompose = "1.8.0"
 composeBom = "2024.04.01"
+lifecycleRuntimeKtxVersion = "latest_version"
+lifecycleViewmodelKtx = "latest_version"
 materialIconsExtended = "1.6.8"
 navigationCompose = "2.7.7"
 navigationRuntimeKtx = "2.7.7"
+retrofit = "2.1.0"
+retrofitVersion = "2.0.0-beta2"
+squareupConverterGson = "2.4.0"
+squareupConverterGsonVersion = "2.6.0"
+squareupRetrofit = "latest_version"
+squareupRetrofitVersion = "2.4.0"
+supportAnnotations = "28.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-lifecycle-runtime-ktx-vlatestversion = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtxVersion" }
+androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
+converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
+converter-gson-v2110 = { module = "com.squareup.retrofit2:converter-gson", version.ref = "comSquareupRetrofit2ConverterGson" }
+converter-gson-v240 = { module = "com.squareup.retrofit2:converter-gson", version.ref = "squareupConverterGson" }
+converter-gson-v260 = { module = "com.squareup.retrofit2:converter-gson", version.ref = "squareupConverterGsonVersion" }
+gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -30,6 +51,13 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 androidx-navigation-runtime-ktx = { group = "androidx.navigation", name = "navigation-runtime-ktx", version.ref = "navigationRuntimeKtx" }
+retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+retrofit-converter-gson = { module = "com.squareup.retrofit:converter-gson", version.ref = "converterGsonVersion" }
+retrofit-v2110 = { module = "com.squareup.retrofit2:retrofit", version.ref = "comSquareupRetrofit2Retrofit" }
+retrofit-v240 = { module = "com.squareup.retrofit2:retrofit", version.ref = "squareupRetrofitVersion" }
+retrofit-vlatestversion = { module = "com.squareup.retrofit2:retrofit", version.ref = "squareupRetrofit" }
+squareup-retrofit = { module = "com.squareup.retrofit:retrofit", version.ref = "retrofitVersion" }
+support-annotations = { group = "com.android.support", name = "support-annotations", version.ref = "supportAnnotations" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
