--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.5.0"
+coilCompose = "2.6.0"
 comSquareupRetrofit2ConverterGson = "2.11.0"
 comSquareupRetrofit2Retrofit = "2.11.0"
 converterGson = "latest.version"
@@ -25,12 +26,14 @@ squareupConverterGsonVersion = "2.6.0"
 squareupRetrofit = "latest_version"
 squareupRetrofitVersion = "2.4.0"
 supportAnnotations = "28.0.0"
+runtimeLivedata = "1.6.8"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-lifecycle-runtime-ktx-vlatestversion = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtxVersion" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
+coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
 converter-gson-v2110 = { module = "com.squareup.retrofit2:converter-gson", version.ref = "comSquareupRetrofit2ConverterGson" }
 converter-gson-v240 = { module = "com.squareup.retrofit2:converter-gson", version.ref = "squareupConverterGson" }
@@ -58,6 +61,7 @@ retrofit-v240 = { module = "com.squareup.retrofit2:retrofit", version.ref = "squ
 retrofit-vlatestversion = { module = "com.squareup.retrofit2:retrofit", version.ref = "squareupRetrofit" }
 squareup-retrofit = { module = "com.squareup.retrofit:retrofit", version.ref = "retrofitVersion" }
 support-annotations = { group = "com.android.support", name = "support-annotations", version.ref = "supportAnnotations" }
+androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
