--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,7 @@ comSquareupRetrofit2ConverterGson = "2.11.0"
 comSquareupRetrofit2Retrofit = "2.11.0"
 converterGson = "latest.version"
 converterGsonVersion = "2.0.0-beta2"
+firebaseBomVersion = "33.1.2"
 gson = "2.10.1"
 kotlin = "1.9.0"
 coreKtx = "1.10.1"
@@ -21,10 +22,7 @@ firebaseAuthKtx = "23.0.0"
 material3 = "1.2.1"
 navigationFragment = "2.7.7"
 
-[libraries]
-androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
-firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
+
 
 lifecycleRuntimeKtxVersion = "latest_version"
 lifecycleViewmodelKtx = "latest_version"
@@ -39,6 +37,7 @@ squareupRetrofit = "latest_version"
 squareupRetrofitVersion = "2.4.0"
 supportAnnotations = "28.0.0"
 runtimeLivedata = "1.6.8"
+firebaseFirestoreKtx = "25.0.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -50,6 +49,8 @@ converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref
 converter-gson-v2110 = { module = "com.squareup.retrofit2:converter-gson", version.ref = "comSquareupRetrofit2ConverterGson" }
 converter-gson-v240 = { module = "com.squareup.retrofit2:converter-gson", version.ref = "squareupConverterGson" }
 converter-gson-v260 = { module = "com.squareup.retrofit2:converter-gson", version.ref = "squareupConverterGsonVersion" }
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBomVersion" }
+google-firebase-auth-ktx = { module = "com.google.firebase:firebase-auth-ktx" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -80,9 +81,9 @@ retrofit-vlatestversion = { module = "com.squareup.retrofit2:retrofit", version.
 squareup-retrofit = { module = "com.squareup.retrofit:retrofit", version.ref = "retrofitVersion" }
 support-annotations = { group = "com.android.support", name = "support-annotations", version.ref = "supportAnnotations" }
 androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
+firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
 
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-
