--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ agp = "8.5.0"
 coilCompose = "2.6.0"
 comSquareupRetrofit2ConverterGson = "2.11.0"
 comSquareupRetrofit2Retrofit = "2.11.0"
+comSquareupRetrofit2Retrofit2 = "(insert latest version)"
 converterGson = "latest.version"
 converterGsonVersion = "2.0.0-beta2"
 gson = "2.10.1"
@@ -58,6 +59,7 @@ retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit
 retrofit-converter-gson = { module = "com.squareup.retrofit:converter-gson", version.ref = "converterGsonVersion" }
 retrofit-v2110 = { module = "com.squareup.retrofit2:retrofit", version.ref = "comSquareupRetrofit2Retrofit" }
 retrofit-v240 = { module = "com.squareup.retrofit2:retrofit", version.ref = "squareupRetrofitVersion" }
+retrofit-vinsertlatestversion = { module = "com.squareup.retrofit2:retrofit", version.ref = "comSquareupRetrofit2Retrofit2" }
 retrofit-vlatestversion = { module = "com.squareup.retrofit2:retrofit", version.ref = "squareupRetrofit" }
 squareup-retrofit = { module = "com.squareup.retrofit:retrofit", version.ref = "retrofitVersion" }
 support-annotations = { group = "com.android.support", name = "support-annotations", version.ref = "supportAnnotations" }
